--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "collections": "^5.1.13",
     "discord-bot-youtube-notifications": "^1.1.5",
-    "discord.js": "^14.7.1"
+    "discord.js": "^14.7.1",
+    "uwuifier": "^4.0.5"
   }
 }
