--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@alexaltea/capstone-js": "^3.0.5",
     "collections": "^5.1.13",
     "discord-bot-youtube-notifications": "^1.1.5",
     "discord.js": "^14.7.1",
